--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -31,7 +31,7 @@
     </div>
 
 
-    <div id="wrapper2" class="page">
+    <div id="wrapper2" class="page wrapper ">
       <div class="scroller">
         <div class="container">
 
@@ -65,7 +65,7 @@
     </div>
 
 
-    <div id="wrapper3" class="page">
+    <div id="wrapper3" class="page wrapper ">
       <div class="scroller">
         <div class="container">
 
@@ -84,7 +84,7 @@
                     <table class="table">
                       <thead>
                       <tr>
-                        <th colspan="8">
+                        <th colspan="8" class="h-header yellow">
                           <span>{{fromNow(ranking.date)}}</span>
                         </th>
                       </tr>
