--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
@@ -55,31 +55,15 @@
     </div>
 </div>
 
-<div id="wrapper2" class="page wrapper" style="left: 100%;" >
+<div id="wrapper2" class="page wrapper">
     <div class="scroller">
-        <div class="container" >
-            <!--div class="row" style="height: 150px; margin-bottom: 1px !important;" >
-                <div class="col-xs-12">
-                    <span>&nbsp;</span>
-                </div>
-            </div-->
-
-            <div class="row h-header red">
-              <div class="col-xs-12">
-                  <span ng-bind="item.league.name"></span>
-                  <span class="section-refresh" ng-class="refreshIconClass" ng-click="refreshEvents()">
-                      <i class="icon mdi-navigation-refresh"></i>
-                  </span>
-              </div>
-            </div>
-
-
-            <div class="row" >
+        <div class="container">
+            <div class="row">
                 <div class="col-xs-12" >
                     <table class="table" ng-repeat="action in item.mtm.actions">
                         <thead>
                             <tr>
-                                <th colspan="2"  class="status {{action.period.short_name}} h-header yellow">
+                                <th colspan="2" class="status {{action.period.short_name}} h-header yellow">
                                     <span ng-bind="action.period.name"></span>
                                 </th>
                             </tr>
@@ -87,10 +71,10 @@
                         <tbody>
                         <tr ng-repeat="event in action.events  track by event.id_game_match_events"  >
                             <td style="width: 20% !important;" >
-                                <span style="font-weight: bold; font-size: 1.6em;">{{event.action_minute}}'</span>
+                                <span >{{event.action_minute}}'</span>
                             </td>
                             <td style="width: 80% !important; text-align: left; ">
-                                <p style="font-size: 1.6em;">
+                                <p >
                                     <b>{{event.player_a}}</b> de {{event.teams}},  {{event.action.description}}
                                 </p>
                             </td>
@@ -99,50 +83,39 @@
                     </table>
                 </div>
             </div>
-
         </div>
     </div>
-
-    <!--div class="row row-header row-header-live">
-        <div class="col-xs-12 text-center text-center-vertical">
-            <span ng-bind="item.league.name" style="font-size: 1.2em; font-weight: bold;"></span>
-            <span class="section-refresh" ng-class="refreshIconClass" ng-click="refreshEvents()">
-                <i class="icon mdi-navigation-refresh"></i>
-            </span>
-        </div>
-    </div-->
 
     <div class="row row-header h-header red">
       <div class="col-xs-12">
         <span ng-bind="item.league.name"></span>
-        <span ng-class="refreshIconClass" ng-click="refreshEvents()" style="position: absolute; right: 10px;">
-            <i class="icon mdi-navigation-refresh" style=" font-size:2em;vertical-align: middle;"></i>
-        </span>
+          <span ng-class="refreshIconClass" ng-click="refreshEvents()" style="position: absolute; right: 10px;">
+              <i class="icon mdi-navigation-refresh" style=" font-size:2em;vertical-align: middle;"></i>
+          </span>
       </div>
     </div>
 
     <div class="row-scoreboard">
-        <div class="row text-center">
-            <div class="col-xs-6" ng-class="{winner:item.match.home.goals >= item.match.away.goals}">
-                <span ng-bind="item.match.home.name" style="font-size: 1.2em;"></span>
-            </div>
-            <div class="col-xs-6" ng-class="{winner:item.match.away.goals >= item.match.home.goals}">
-                <span ng-bind="item.match.away.name" style="font-size: 1.2em;"></span>
-            </div>
+      <div class="row text-center">
+        <div class="col-xs-6" ng-class="{winner:item.match.home.goals >= item.match.away.goals}">
+          <span ng-bind="item.match.home.name" style="font-size: 1.2em;"></span>
         </div>
-        <div class="row text-center">
-            <div class="col-xs-6" ng-class="{winner:item.match.home.goals >= item.match.away.goals}">
-                <span ng-bind="item.match.home.goals" class="goal"></span>
-            </div>
-            <div class="col-xs-6" ng-class="{winner:item.match.away.goals >= item.match.home.goals}">
-                <span ng-bind="item.match.away.goals" class="goal"></span>
-            </div>
+        <div class="col-xs-6" ng-class="{winner:item.match.away.goals >= item.match.home.goals}">
+          <span ng-bind="item.match.away.name" style="font-size: 1.2em;"></span>
         </div>
-        <div class="row text-center">
-            <div class="col-xs-12">
-                <span class="status _{{item.match.status.id_status}}"
-                      ng-bind="item.match.status.name" style="font-size: 1.2em;"></span>
-            </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-xs-6" ng-class="{winner:item.match.home.goals >= item.match.away.goals}">
+          <span ng-bind="item.match.home.goals" class="goal"></span>
         </div>
+        <div class="col-xs-6" ng-class="{winner:item.match.away.goals >= item.match.home.goals}">
+          <span ng-bind="item.match.away.goals" class="goal"></span>
+        </div>
+      </div>
     </div>
+
+
 </div>
+
+
+
