--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/remind.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/remind.html
@@ -48,7 +48,7 @@
                         </form>
 
                         <div class="list-group">
-                            <a ui-sref="remind" class="list-group-item list-item">
+                            <a ui-sref="terms" class="list-group-item list-item">
                                 <div class="col-xs-10">
                                     <span translate>LOGIN.TERMS_LABEL</span>
                                 </div>
