--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/loading.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/loading.html
@@ -1,3 +1,5 @@
-<div class="loading">
-  <span class="label label-default">{{'LOADING' | translate}} ...</span>
+<div id="screen-block" class="h-horizontal" ng-click="clickPage()" >
+  <div  class="h-vertical">
+    <img  src="img/loading.svg" style="width: 50px; height: auto;"  class="rotate" onerror="this.src='img/loading.png'">
+  </div>
 </div>
