--- a/FutbolBrasil/futbol-brasil/app/styles/animate.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/animate.css
@@ -3123,3 +3123,14 @@ Copyright (c) 2014 Daniel Eden
   -webkit-animation-name: zoomOutUp;
   animation-name: zoomOutUp;
 }
+
+
+.rotate {
+  -webkit-animation: spin 1s linear infinite;
+  -moz-animation: spin 4s linear infinite;
+  animation: spin 4s linear infinite;
+}
+
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
