--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -4,37 +4,25 @@
 <div id="wrapper" class="page">
     <div class="scroller">
         <div class="container">
-
             <div class="row h-list news" ng-show="hasNews">
                 <div class="col-xs-12"
                      ng-repeat="item in news track by item.idNews"
-                     ng-click="showContentNews(item)">
+                     ng-click="showContentNews(item)" on-last-repeat>
                     <h6 class="headline" style="font-weight:bold;" >{{item.title}}</h6>
                     <i class="icon mdi-device-access-time"></i>
                     <span class="moment" style="color: #2c9cd3;">{{fromNow(item.publicationDate)}}</span>
                 </div>
             </div>
-
-            <div class="row" ng-hide="hasNews">
-                <div class="col-xs-12">
-                    <div class="no-content-panel">
-                        <i class="mdi-action-info-outline"></i>
-                        <div class="no-content-panel-title" translate>EMPTY_STATES.NEWS</div>
-                    </div>
-                </div>
-            </div>
-
         </div>
     </div>
 </div>
 
+
+
 <div id="wrapper2" class="page" style="left: 100%;" >
     <div class="scroller">
         <div class="container">
-            <div class="row" style="margin-top:10px;">
-                <div class="col-xs-12 text-right" ng-click="share(contentNews)">
-                  <i class="mdi-social-share" style="font-size: 2em;"></i>
-                </div>
+            <div class="row">
                 <div class="col-xs-12">
                   <h3 class="headline">{{contentNews.title}}</h3>
                   <i class="icon mdi-device-access-time"></i>
@@ -46,4 +34,17 @@
             </div>
         </div>
     </div>
+
+
+</div>
+
+<div style="position: absolute; z-index: 20; top:0; right:20px; height:50px; line-height:50px;" ng-click="share(contentNews)" ng-show="isPageContentLeft">
+  <i class="mdi-social-share" style="font-size:2em; vertical-align: middle; color:#ffffff; "></i>
+</div>
+
+<div class="no-content-panel h-horizontal" ng-hide="hasNews">
+  <div class="h-vertical">
+    <i class="mdi-action-info-outline"></i>
+    <div class="no-content-panel-title" translate>EMPTY_STATES.NEWS</div>
+  </div>
 </div>
