EXTREME_SPORTS: - Agregados archivos de traducciones para Portugués y Español, ambos con textos en Inglés - Cambios en UI

--- a/ExtremeSports/cordova-web/app/css/hecticus.css
+++ b/ExtremeSports/cordova-web/app/css/hecticus.css
@@ -142,3 +142,10 @@ body {
 .nav-tabs > li > a:hover, .nav-tabs > li > a:focus {
     color: #A43062 !important;
 }
+
+.img-responsive{
+    margin-left: auto;
+    margin-right: auto;
+    height: auto;
+    max-width: 100%;
+}
