--- a/ExtremeSports/cordova-web/app/modules/core/views/news-detail.html
+++ b/ExtremeSports/cordova-web/app/modules/core/views/news-detail.html
@@ -1,17 +1,19 @@
 <div id="news-detail-wrapper" class="wrapper">
     <div class="scroller">
-        <div class="post-detail">
-            <div class="row img">
-                <img class="img-responsive" ng-src="{{newsPost.post.files[0]}}" alt="{{newsPost.post.title}}"/>
-            </div>
-            <div class="body">
-                <div class="date pull-right">15m</div>
-                <h2 class="title" ng-bind="newsPost.post.title"></h2>
-                <div class="content">
-                    <p ng-bind="newsPost.post.content"></p>
-                    <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
-                        Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions.
-                        Completely synergize resource sucking relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
+        <div class="row">
+            <div class="post-detail col-xs-12 col-md-6 col-md-push-3">
+                <div class="row img">
+                    <img class="img-responsive text-center" ng-src="{{newsPost.post.files[0]}}" alt="{{newsPost.post.title}}"/>
+                </div>
+                <div class="body">
+                    <div class="date pull-right">15m</div>
+                    <h2 class="title" ng-bind="newsPost.post.title"></h2>
+                    <div class="content">
+                        <p ng-bind="newsPost.post.content"></p>
+                        <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
+                            Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions.
+                            Completely synergize resource sucking relationships via premier niche markets. Professionally cultivate one-to-one customer service with robust ideas. Dynamically innovate resource-leveling customer service for state of the art customer service.</p>
+                    </div>
                 </div>
             </div>
         </div>
