FUTBOL-BRASIL: Portal Wap apunta al root de dominio

--- a/FutbolBrasil/web/app/views/wap/error.scala.html
+++ b/FutbolBrasil/web/app/views/wap/error.scala.html
@@ -8,7 +8,7 @@
 
 } else {
 
-    @html4{
+    @html4(false){
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
                 <h3>@message</h3>
