--- a/FutbolBrasil/web/app/views/wap/mtm.scala.html
+++ b/FutbolBrasil/web/app/views/wap/mtm.scala.html
@@ -4,7 +4,13 @@
 @if(HD.getLevelSupport() < models.wap.HandsetDetection.HTML) {
 } else {
 
-    @html4{
+    @html4(true){
+
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
+                @Messages.get("MTM_LABEL")
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" >
