--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -53,7 +53,7 @@ body,ul,li { padding: 0; margin: 0; border: 0; width: 100%; height: 100%; color:
 
 header, footer {
     position: absolute;
-    z-index: 10;
+    z-index: 100;
     left:0;
     right:0;
     width: 100%;
@@ -968,6 +968,7 @@ h6.team-name {
 
     .content-mtm #wrapper2 {
       top: 185px;
+      z-index: 10;
     }
 
     .content-news .headline {
@@ -1004,6 +1005,11 @@ h6.team-name {
         padding: 0 !important;
         margin: 0 !important;
     }
+
+    .content-mtm .row-header {
+      top: -135px;
+    }
+
 
     .content-standings #wrapper3,
     .content-standings #wrapper3 .scroller,
