--- a/FutbolBrasil/web/app/views/wap/html4.scala.html
+++ b/FutbolBrasil/web/app/views/wap/html4.scala.html
@@ -29,7 +29,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="header" style="text-align:center;">futbol Brasil</div>
+            <div class="header" style="text-align:center;">@Messages.get("APP_TITLE")</div>
 
             @if(bMenu) {
                 @menu
@@ -41,7 +41,7 @@
                 @menu
             }
 
-            <div class="header" style="text-align:center;">futbol Brasil</div>
+            <div class="header" style="text-align:center;">@Messages.get("APP_TITLE")</div>
         </div>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
         <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
