FUTBOL-BRASIL: Actualizaciones varias de l&f;

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/prediction.html
@@ -2,7 +2,110 @@
     <div id="scroller" ng-style="getTotalWidth()">
         <ul>
             <li ng-style="getWidth()" ng-repeat="league in leagues track by league.id_competitions"  >
-                <div class="row row-header">
+                <div class="container">
+
+                  <div class="row h-header green">
+                    <div class="col-xs-2 tabs" ng-click="prevPage($index)">
+                      <span class="mdi-navigation-arrow-back" ng-hide="leagues[$index-1].name === undefined"></span>
+                    </div>
+                    <div class="col-xs-8">
+                      <span ng-bind="league.name" class="caption"></span>
+                    </div>
+                    <div class="col-xs-2 tabs" ng-click="nextPage($index)">
+                      <span  class="mdi-navigation-arrow-forward" ng-hide="leagues[$index+1].name === undefined"></span>
+                    </div>
+                  </div>
+
+                  <div class="row h-header red">
+                    <div ng-show="league.bet" class="col-xs-12 text-center"
+                         ng-click="saveBet($index, league.id_competitions)">
+
+                      <span style="font-size:1.2em;">{{leagues[$index].bet.client_bets}}</span>
+                      <span translate>SECTIONS.BETS.PREDICTIONS</span>
+                      <i style="font-size:1.6em;"class="mdi-social-person" ></i>
+                      <span>/</span>
+                      <span style="font-size:1.8em;">{{leagues[$index].bet.total_bets}}</span>
+                      <span translate>SECTIONS.NOTISTATS.MATCHES</span>
+                      <i style="font-size:1.6em;" class="mdi-content-inbox" ></i>
+
+                    </div>
+                  </div>
+
+                  <div class="row" ng-hide="league.empty">
+                    <div id="{{vWrapper.getName($index)}}" class="wrapper">
+                      <div class="scroller" >
+                        <div class="container">
+                          <div class="col-xs-12"
+                               ng-repeat="fixture in league.fixtures track by fixture.date"
+                               on-last-repeat>
+
+                            <table class="table" >
+                              <thead>
+                              <tr>
+                                <th colspan="3" class="h-header yellow">
+                                  <span ng-bind="getDate(fixture.date)"></span>
+                                </th>
+                              </tr>
+                              </thead>
+                              <tbody>
+
+                              <tr ng-repeat="match in fixture.matches">
+
+                                <td class="col-xs-4 bet"
+                                    ng-click="setBet(match.status.id_status, 0, $parent.$parent.$index, $parent.$index, $index)"
+                                    ng-class="{active: match.bet.client_bet === 0}">
+                                  <i class="mdi-navigation-check animated flipInX"></i>
+                                  <h6 ng-bind="match.home_team.name" class="team-name"></h6>
+                                  <span ng-bind="match.home_team_goals" class="goal" ng-if="match.status.id_status != 0"></span>
+                                </td>
+
+                                <td class="col-xs-4 bet"
+                                    ng-click="setBet(match.status.id_status, 1, $parent.$parent.$index, $parent.$index, $index)"
+                                    ng-class="{active: match.bet.client_bet == 1}">
+                                  <i class="mdi-navigation-check animated flipInX"></i>
+                                  <span ng-bind="getTime(match.date)" class="date"></span> <br/>
+                                  <span ng-bind="match.status.name" class="status _{{match.status.id_status}}"></span>
+                                </td>
+
+                                <td class="col-xs-4 bet"
+                                    ng-click="setBet(match.status.id_status, 2, $parent.$parent.$index,$parent.$index,$index)"
+                                    ng-class="{active: match.bet.client_bet == 2}">
+                                  <i class="mdi-navigation-check animated flipInX"></i>
+                                  <h6 ng-bind="match.away_team.name" class="team-name"></h6>
+                                  <span ng-bind="match.away_team_goals" class="goal" ng-if="match.status.id_status != 0"></span>
+                                </td>
+
+                              </tr>
+
+                              </tbody>
+                            </table>
+                          </div>
+                        </div>	<!--container-->
+                      </div>	<!--scroller-->
+                    </div> <!--wrapper-->
+                  </div> <!--row-->
+
+
+
+                  <div  class="no-content-panel h-horizontal" ng-show="league.empty" >
+                    <div class="h-vertical">
+                      <i class="mdi-action-info-outline"></i>
+                      <div class="no-content-panel-title" translate>EMPTY_STATES.PREDICTIONS</div>
+                    </div>
+                  </div>
+
+
+
+                </div>
+
+
+
+
+                <!--div class="row row-header">
+
+
+
+
 
                     <div class="col-xs-12">
                         <div class="row row-header-competition">
@@ -34,71 +137,9 @@
                         </div>
 
                     </div>
-                </div>
-
-                <div class="row" ng-hide="league.empty">
-                    <div id="{{vWrapper.getName($index)}}" class="wrapper wrapper-full"
-                         style="top:85px !important;">
-                        <div class="scroller" >
-                            <div class="container">
-                                <div class="col-xs-12"
-                                     ng-repeat="fixture in league.fixtures track by fixture.date"
-                                     on-last-repeat>
-
-                                    <table class="table" >
-                                        <thead>
-                                        <tr>
-                                            <th colspan="3" class="h-header yellow">
-                                                <span ng-bind="getDate(fixture.date)"></span>
-                                            </th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-
-                                          <tr ng-repeat="match in fixture.matches">
-
-                                              <td class="col-xs-4 bet"
-                                                  ng-click="setBet(match.status.id_status, 0, $parent.$parent.$index, $parent.$index, $index)"
-                                                  ng-class="{active: match.bet.client_bet === 0}">
-                                                  <i class="mdi-navigation-check animated flipInX"></i>
-                                                  <h6 ng-bind="match.home_team.name" class="team-name"></h6>
-                                                  <span ng-bind="match.home_team_goals" class="goal" ng-if="match.status.id_status != 0"></span>
-                                              </td>
-
-                                              <td class="col-xs-4 bet"
-                                                  ng-click="setBet(match.status.id_status, 1, $parent.$parent.$index, $parent.$index, $index)"
-                                                  ng-class="{active: match.bet.client_bet == 1}">
-                                                  <i class="mdi-navigation-check animated flipInX"></i>
-                                                  <span ng-bind="getTime(match.date)" class="date"></span> <br/>
-                                                  <span ng-bind="match.status.name" class="status _{{match.status.id_status}}"></span>
-                                              </td>
-
-                                              <td class="col-xs-4 bet"
-                                                  ng-click="setBet(match.status.id_status, 2, $parent.$parent.$index,$parent.$index,$index)"
-                                                  ng-class="{active: match.bet.client_bet == 2}">
-                                                  <i class="mdi-navigation-check animated flipInX"></i>
-                                                  <h6 ng-bind="match.away_team.name" class="team-name"></h6>
-                                                  <span ng-bind="match.away_team_goals" class="goal" ng-if="match.status.id_status != 0"></span>
-                                              </td>
-
-                                          </tr>
-
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>	<!--container-->
-                        </div>	<!--scroller-->
-                    </div> <!--wrapper-->
-                </div> <!--row-->
+                </div-->
 
 
-
-                <div  class="no-content-panel h-horizontal" ng-show="league.empty" >
-                  <div class="h-vertical">
-                    <i class="mdi-action-info-outline"></i>
-                    <div class="no-content-panel-title" translate>EMPTY_STATES.PREDICTIONS</div>
-                  </div>
-                </div>
 
             </li>
         </ul>
