--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -2,90 +2,93 @@
     <div id="wrapperH">
         <div id="scroller" ng-style="getTotalWidth()">
             <ul>
-                <li ng-style="getWidth()" ng-repeat="competition in item.competitions" >
+                <li ng-style="getWidth()" ng-repeat="competition in item.competitions">
 
-                  <div class="row row-header">
-                    <div class="col-xs-12">
+                  <div class="container">
 
-                      <div class="row row-header-competition">
-
-                        <div class="col-xs-4 tabs text-left" ng-click="prevPage()">
-                          <span ng-bind="item.competitions[$index-1].name"></span>
-                        </div>
-                        <div class="col-xs-4">
-                          <span ng-bind="competition.name" class="caption"></span>
-                        </div>
-                        <div class="col-xs-4 tabs text-right" ng-click="nextPage()">
-                          <span ng-bind="item.competitions[$index+1].name"></span>
-                        </div>
-
+                    <div class="row h-header green">
+                      <div class="col-xs-2 tabs" ng-click="prevPage($index)">
+                        <span class="mdi-navigation-arrow-back" ng-hide="item.competitions[$index-1].name === undefined"></span>
                       </div>
-
+                      <div class="col-xs-8">
+                        <span ng-bind="competition.name" class="caption"></span>
+                      </div>
+                      <div class="col-xs-2 tabs" ng-click="nextPage($index)">
+                        <span class="mdi-navigation-arrow-forward" ng-hide="item.competitions[$index+1].name === undefined"></span>
+                      </div>
                     </div>
+
+                    <div class="row">
+                      <div class="col-xs-6" >
+                                <span class="btn btn-success btn-filter-{{$index}} disabled"
+                                      ng-class="{'disabled': isActive('competition{{$index}}')}"
+                                      ng-click="showTournament()" translate>LEADERBOARD.TOURNAMENT</span>
+                      </div>
+                      <div class="col-xs-6" >
+                                <span class="btn btn-success btn-filter-{{$index}}"
+                                      ng-class="{'disabled': isActive('phase{{$index}}')}"
+                                      ng-click="showPhase()" translate>LEADERBOARD.PHASE</span>
+                      </div>
+                    </div>
+
+
+                    <div class="row" ng-show="hasLeaderboard">
+                      <div id="{{vWrapper.getName($index)}}" class="wrapper"
+                           style="margin-top:100px !important;">
+                        <div class="scroller" style="position: relative;">
+                          <div class="row">
+                            <div class="col-xs-12" >
+                              <table class="table">
+                                <thead>
+                                <tr>
+                                  <th class="h-header yellow">##</th>
+                                  <th class="h-header yellow" translate>LEADERBOARD.PLAYER</th>
+                                  <th class="h-header yellow" translate>LEADERBOARD.POINTS</th>
+                                </tr>
+                                </thead>
+                                <tbody >
+                                <tr ng-repeat="leader in competition.leaderboard"
+                                    ng-class="{'active' : $odd,  'client' : competition.client.client == leader.client }" on-last-repeat>
+                                  <td>
+                                                            <span class="text-center-vertical"
+                                                                  ng-bind="leader.index" ></span>
+                                  </td>
+                                  <td>
+                                                            <span class="text-center-vertical"
+                                                                  ng-bind="leader.client"></span>
+                                  </td>
+                                  <td>
+                                                            <span class="text-center-vertical"
+                                                                  ng-bind="leader.score"></span>
+                                  </td>
+                                </tr>
+                                </tbody>
+                              </table>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="row" ng-hide="hasLeaderboard">
+                      <div class="col-xs-12 news">
+                        <div class="no-content-panel" style="margin-top: 30px !important;">
+                          <i class="mdi-action-info-outline"></i>
+                          <div class="no-content-panel-title" translate>EMPTY_STATES.LEADERBOARD</div>
+                        </div>
+                      </div>
+                    </div>
+
 
                   </div>
 
 
 
-                        <div class="row" style="margin-top:50px !important;">
-                            <div class="col-xs-6" >
-                                <span class="btn btn-success btn-filter-{{$index}} disabled"
-                                      ng-class="{'disabled': isActive('competition{{$index}}')}"
-                                      ng-click="showTournament()" translate>LEADERBOARD.TOURNAMENT</span>
-                            </div>
-                            <div class="col-xs-6" >
-                                <span class="btn btn-success btn-filter-{{$index}}"
-                                      ng-class="{'disabled': isActive('phase{{$index}}')}"
-                                      ng-click="showPhase()" translate>LEADERBOARD.PHASE</span>
-                            </div>
-                        </div>
 
-                        <div class="row" ng-show="hasLeaderboard">
-                            <div id="{{vWrapper.getName($index)}}" class="wrapper"
-                                 style="margin-top:100px !important;">
-                                <div class="scroller" style="position: relative;">
-                                    <div class="row">
-                                        <div class="col-xs-12" >
-                                            <table class="table">
-                                                <thead>
-                                                    <tr>
-                                                        <th class="h-header yellow">##</th>
-                                                        <th class="h-header yellow" translate>LEADERBOARD.PLAYER</th>
-                                                        <th class="h-header yellow" translate>LEADERBOARD.POINTS</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody >
-                                                    <tr ng-repeat="leader in competition.leaderboard"
-                                                        ng-class="{'active' : $odd,  'client' : competition.client.client == leader.client }" on-last-repeat>
-                                                        <td>
-                                                            <span class="text-center-vertical"
-                                                                  ng-bind="leader.index" ></span>
-                                                        </td>
-                                                        <td>
-                                                            <span class="text-center-vertical"
-                                                                  ng-bind="leader.client"></span>
-                                                        </td>
-                                                        <td>
-                                                            <span class="text-center-vertical"
-                                                                  ng-bind="leader.score"></span>
-                                                        </td>
-                                                    </tr>
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
 
-                        <div class="row" ng-hide="hasLeaderboard">
-                            <div class="col-xs-12 news">
-                                <div class="no-content-panel" style="margin-top: 30px !important;">
-                                    <i class="mdi-action-info-outline"></i>
-                                    <div class="no-content-panel-title" translate>EMPTY_STATES.LEADERBOARD</div>
-                                </div>
-                            </div>
-                        </div>
+
+
+
 
                 </li>
             </ul>
