--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -8,7 +8,7 @@
                 <div class="col-xs-12"
                      ng-repeat="item in news track by item.idNews"
                      ng-click="showContentNews(item)" on-last-repeat>
-                    <h6 class="headline" style="font-weight:bold;" >{{item.title}}</h6>
+                    <h6 class="headline h-ellipsis" style="font-weight:bold;" >{{item.title}}</h6>
                     <i class="icon mdi-device-access-time"></i>
                     <span class="moment" style="color: #2c9cd3;">{{fromNow(item.publicationDate)}}</span>
                 </div>
