--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -4,20 +4,15 @@
             <li ng-style="getWidth()" ng-repeat="league in leagues" >
                 <div class="container">
 
-                  <div class="row row-header">
-                    <div class="col-xs-12">
-                      <div class="row row-header-competition">
-                        <div class="col-xs-4 tabs text-left" ng-click="prevPage($index)">
-                          <span ng-bind="leagues[$index-1].name"></span>
-                        </div>
-                        <div class="col-xs-4">
-                          <span ng-bind="league.name" class="caption"></span>
-                        </div>
-                        <div class="col-xs-4 tabs text-right" ng-click="nextPage($index)">
-                          <span ng-bind="leagues[$index+1].name"></span>
-                        </div>
-                      </div>
-
+                  <div class="row h-header green">
+                    <div class="col-xs-2 tabs" ng-click="prevPage($index)">
+                      <span class="mdi-navigation-arrow-back" ng-hide="leagues[$index-1].name === undefined"></span>
+                    </div>
+                    <div class="col-xs-8">
+                      <span ng-bind="league.name" class="caption"></span>
+                    </div>
+                    <div class="col-xs-2 tabs" ng-click="nextPage($index)">
+                      <span  class="mdi-navigation-arrow-forward" ng-hide="leagues[$index+1].name === undefined"></span>
                     </div>
                   </div>
 
