--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -9,6 +9,8 @@
                  ng-repeat="competition in item.competitions"
                  ng-click="showContentPhases(competition)"
                  data-news="{{ competition.id_competitions }}" on-last-repeat>
+
+              <i class="mdi-action-bookmark" style="font-size:2em; vertical-align: middle;"></i>
               <span>{{competition.name}}</span>
             </div>
 
@@ -45,6 +47,7 @@
             <div class="col-xs-12" ng-repeat="phase in item.phases"
                  ng-click="showContentRanking(item.competition.id_competitions
                         , phase.id_phases)">
+              <i class="mdi-action-bookmark" style="font-size:2em; vertical-align: middle;"></i>
               <span ng-bind="phase.global_name"></span>
             </div>
           </div>
