--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu-item.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu-item.html
@@ -3,8 +3,7 @@
     <div class="col-xs-2 text-right" style="padding-right:5px !important;">
         <span ng-class=" 'icon {{icon}}' "></span>
     </div>
-    <div class="col-xs-8">
-      <span ng-transclude></span>
+    <div class="col-xs-8" ng-transclude>
     </div>
   </div>
 </div>
