--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
@@ -88,7 +88,7 @@
                         </a>
                     </div>
 
-                    <form name="msisdnForm" ng-submit="enterAsGuest()" class="form-horizontal" ng-hide="isWeb()">
+                    <form name="msisdnForm" ng-submit="enterAsGuest()" class="form-horizontal">
                         <fieldset>
                             <div class="form-group">
                                 <div class="col-xs-12">
