FUTBOL BRASIL: Update screen splashs & icons; bgcolor of buttons in teams selections

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
@@ -36,11 +36,10 @@
 </div>
 
 <ul class="pager search-list-pager">
-    <li class="previous" ng-class="{'disabled' : !hasPrev }" ng-click="showPrevPage()">
-        <span translate>PREVIOUS</span>
-    </li>
-    <li class="next" ng-class="{'disabled' : !hasNext }" ng-click="showNextPage()">
-        <span translate>NEXT</span>
+    <li class="previous" ng-class="{'disabled' : !hasPrev }" ng-click="showPrevPage()" translate>
+      PREVIOUS
+    <li class="next" ng-class="{'disabled' : !hasNext }" ng-click="showNextPage()" translate>
+      NEXT
     </li>
 </ul>
 
