Cambiar la forma como son enviados los datos para el método put desde client-manager Mandar el update del lenguaje

--- a/ExtremeSports/cordova-web/app/modules/core/views/news.html
+++ b/ExtremeSports/cordova-web/app/modules/core/views/news.html
@@ -6,7 +6,7 @@
             </div>
         </div>
         <div class="list-group">
-            <hc-news-post joe="false" post="post" on-click="news.openDetail(post)" ng-repeat="post in news.posts track by post.id_post"></hc-news-post>
+            <hc-news-post post="post" on-click="news.openDetail(post)" ng-repeat="post in news.posts track by post.id_post"></hc-news-post>
         </div>
     </div>
 </div>
